k8s-project/postgresql-pgadmin/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/postgresql-pgadmin-default: "true"
        io.kompose.service: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              valueFrom:
                configMapKeyRef:
                  name: pg-test-configmap
                  key: pg_db
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: pg-test-secret
                  key: pg_pwd
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: pg-test-secret
                  key: pg_user
          image: postgres:latest
          name: postgres
          ports:
            - containerPort: 5432
          resources: {}
      restartPolicy: Always
status: {}
