k8s-project/postgresql-pgadmin/postgresql-pgadmin-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: postgresql-pgadmin-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/postgresql-pgadmin-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/postgresql-pgadmin-default: "true"
